slight contrast fix

--- a/resources/styles/stylesheet.css
+++ b/resources/styles/stylesheet.css
@@ -227,6 +227,10 @@ input:hover {
     background-color: #898989;
 }
 
+input:hover::placeholder {
+    color: white;
+}
+
 button:hover {
     background-color: #898989;
 }
